--- a/ch1/hint/templates/hint/hint_code.html
+++ b/ch1/hint/templates/hint/hint_code.html
@@ -52,9 +52,9 @@
             <h3 class="mt-3 mb-2">HINT COUNT</h3>
             <h4 class="m-0">{{ count }} / {{ hintCount }}</h4>
             <div id="ViewTimer"></div>
-            <button type="button" id="timerBtn" onclick="timer_start()" style="color:white;display:none;background-color:black; border-color:black">시작</button>
+            <button type="button" id="timerBtn" onclick="timerStart()" style="color:white;background-color:black; border-color:black">시작</button>
             {% if pause %}
-                <button type="button" id="pauseBtn" onclick="timer_stop()" style="color:white;background-color:black; border-color:black">일시정지</button>
+                <button type="button" id="pauseBtn" onclick="timer_stop()" style="color:white;display:none;background-color:black; border-color:black">일시정지</button>
             {% endif %}
         </div>
         <div class="col-2"></div>
@@ -100,43 +100,81 @@
 
 <script src="https://dmla.github.io/jsqrcode/src/qr_packed.js"></script>
 <script>
+
     // 타이머 기능
     {% if okTimer %}
-        console.log(localStorage.getItem('test'));
-        var SetTime = localStorage.getItem('test');
+        var startTimer = localStorage.getItem('startTimer');
+        var currentTimer = localStorage.getItem('currentTime');
+        var timer = localStorage.getItem('timer');
+        var time = localStorage.getItem('time');
         var start = localStorage.getItem('start');
-        if (!start) {
-            document.getElementById("timerBtn").style.display='';
-            {% if pause %}
-            document.getElementById("pauseBtn").style.display='none';
-            {% endif %}
+        var pause = localStorage.getItem('pause');
+
+        console.log(time);
+        console.log(start);
+        if (start == "true") {
+            document.getElementById("timerBtn").style.display='none';
         }
-        if (localStorage.getItem('test') <= -100) {
-            document.getElementById("timerBtn").style.display='';
-            {% if pause %}
-            document.getElementById("pauseBtn").style.display='none';
-            {% endif %}
+        {% if pause %}
+            if (start == "true") {
+                document.getElementById("pauseBtn").style.display='';
+            }
+        {% endif %}
+        if (start == "false") {
+            function timerStart() {
+                var startDate = new Date();
+                time = startDate.getTime()/1000;
+                timeStart = Math.round(time);
+                localStorage.startTimer = timeStart;
+                localStorage.start = "true";
+
+
+                location.reload();
+            }
         }
-        function timer_start() {
-            localStorage.test = {{ timer }} * 60;
-            localStorage.start = true;
-            location.reload();
+
+        function count() {
+            var currentDates = new Date();
+            timestamp = currentDates.getTime()/1000;
+            currentTime = Math.round(timestamp);
+            localStorage.currentTimer = currentTime;
+            second = localStorage.currentTimer - localStorage.startTimer;
+            console.log("현재 시간 : " + localStorage.currentTimer);
+            console.log("시작 시간 : " + localStorage.startTimer);
+            console.log(second);
+            console.log(localStorage.timer);
+            localStorage.time = localStorage.timer - second;
+            console.log(localStorage.time);
+            m = pad(Math.floor(localStorage.time / 60),2) + " : " + pad((localStorage.time % 60),2);
+            var msg = "<font color='red'>" + m + "</font>";
+            if (localStorage.timer < 0) {
+                m = "00 : 00";
+                var msg = "<font color='red'>" + m + "</font>";
+                document.all.ViewTimer.innerHTML = msg;
+            }
+            document.all.ViewTimer.innerHTML = msg;
+            if (localStorage.time < 1) {
+                clearInterval(tid);
+            }
         }
+
 
         {% if pause %}
+            function timer_stop() {
+                localStorage.timer = localStorage.time;
+                clearInterval(tid);
+                document.getElementById("pauseBtn").innerHTML = "재시작";
+                document.getElementById("pauseBtn").setAttribute('onClick', 'timer_restart()');
+            }
 
-        function timer_stop() {
-            clearInterval(tid);
-            document.getElementById("pauseBtn").innerHTML = "재시작";
-            document.getElementById("pauseBtn").setAttribute( 'onClick', 'timer_restart()' );
-        }
-
-        function timer_restart() {
-            document.getElementById("pauseBtn").innerHTML = "일시정지";
-            document.getElementById("pauseBtn").setAttribute( 'onClick', 'timer_stop()' );
-            tid=setInterval('msg_time()',1000)
-        }
-
+            function timer_restart() {
+                date = new Date();
+                localStorage.startTimer = Math.round(date.getTime()/1000);
+                localStorage.time = localStorage.timer;
+                tid = setInterval('count()', 1000);
+                document.getElementById("pauseBtn").innerHTML = "일시정지";
+                document.getElementById("pauseBtn").setAttribute( 'onClick', 'timer_stop()' );
+            }
         {% endif %}
 
         function pad(n, width) {
@@ -144,29 +182,9 @@
           return n.length >= width ? n : new Array(width - n.length + 1).join('0') + n;
         }
 
-        function msg_time() {
-            m = pad(Math.floor(SetTime / 60),2) + " : " + pad((SetTime % 60),2);
-            var msg = "<font color='red'>" + m + "</font>";
-            document.all.ViewTimer.innerHTML = msg;
-            localStorage.test--;
-            SetTime--;
-            if (localStorage.test < 0) {
-                clearInterval(tid);
-                m = "00 : 00";
-                var msg = "<font color='red'>" + m + "</font>";
-                document.all.ViewTimer.innerHTML = msg;
-                start = false;
-            }
-            if (!start) {
-                m = pad(Math.floor({{ timer }} * 60 / 60),2) + " : " + pad(({{ timer }} * 60 % 60),2);
-                var msg = "<font color='red'>" + m + "</font>";
-                document.all.ViewTimer.innerHTML = msg;
-            }
-        }
-
-        if (start) {
+        if (start == "true") {
             window.onload = function TimerStart(){
-                tid=setInterval('msg_time()',1000)
+                tid=setInterval('count()',1000);
             };
         }
     {% endif %}
