--- a/ch1/mysite/templates/base.html
+++ b/ch1/mysite/templates/base.html
@@ -4,6 +4,8 @@
         <meta charset="utf-8">
         <!-- 부트스트랩 모바일 -->
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <!-- 부트스트랩 -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
