--- a/ch1/accounts/templates/accounts/login.html
+++ b/ch1/accounts/templates/accounts/login.html
@@ -8,6 +8,11 @@
     input::placeholder {
         color: white;
     }
+    @media (min-width: 799px) and (max-width: 801px) {
+        #fk {
+            display:block !important;
+        }
+    }
 </style>
 
 <div class="container text-center d-none d-sm-block">
@@ -60,6 +65,51 @@
         </div>
         <div class="col-4"></div>
     </div>
+
+
+    <div class="container" id="fk" style="display:none;">
+        <div style="height:50px"></div>
+        <h2 style="color:white">HINT PHONE(NE 신논현점)</h2>
+        <div class="row">
+            <div class="col-4"></div>
+            <div class="col-4 py-5 px-4" style="border: 2px solid white;border-radius:15px">
+                <img class="my-3" width="130px" src="{% static 'accounts1.png' %}">
+                <form method="post" action="">
+                    {% csrf_token %}
+                    {{ form.username }}
+                    {{ form.password }}
+                    <input name="method" type="text" value="mobile" style="visibility:hidden">
+                    <button class="form-control mt-0" style="background-color:black;border-color: white" type="submit"><span style="color:white">LOGIN</span></button>
+                    <button class="form-control mt-2" data-target="#myModal" data-toggle="modal" style="background-color:black;border-color: white" type="button"><span style="color:white">SEARCH</span></button>
+                    <div class="modal" id="myModal">
+                      <div class="modal-dialog">
+                        <div class="modal-content">
+
+                          <!-- Modal Header -->
+                          <div class="modal-header">
+                            <h4 class="modal-title">Connect</h4>
+                            <button type="button" class="close" data-dismiss="modal">&times;</button>
+                          </div>
+
+                          <!-- Modal body -->
+                          <div class="modal-body">
+                              <strong>Email</strong> : bizchoollab@naver.com<br>
+                              <strong>Phone</strong> : 010-3968-3572
+                          </div>
+
+                          <!-- Modal footer -->
+                          <div class="modal-footer">
+                            <button type="button" class="btn" data-dismiss="modal">Close</button>
+                          </div>
+
+                        </div>
+                      </div>
+                    </div>
+                </form>
+            </div>
+            <div class="col-4"></div>
+        </div>
+    </div>
 </div>
 
 
@@ -105,7 +155,6 @@
         </div>
         <div class="col-1"></div>
     </div>
-
 </div>
 
 {% endblock %}
