--- a/ch1/accounts/templates/accounts/login.html
+++ b/ch1/accounts/templates/accounts/login.html
@@ -69,7 +69,8 @@
 
     <div class="container" id="fk" style="display:none;">
         <div style="height:50px"></div>
-        <h2 style="color:white">HINT PHONE(NE 신논현점)</h2>
+        <h2 style="color:white">HINT PHONE</h2>
+        <h3 style="color:white">(NE 신논현점)</h3>
         <div class="row">
             <div class="col-4"></div>
             <div class="col-4 py-5 px-4" style="border: 2px solid white;border-radius:15px">
